@@ -993,6 +993,7 @@ FUNTAB R_FunTab[] = {
     {"curlVersion", do_curlVersion, 0, 11, 0, {PP_FUNCALL, PREC_FN, 0}},
     {"curlGetHeaders", do_curlGetHeaders, 0, 11, 5, {PP_FUNCALL, PREC_FN, 0}},
     {"curlDownload", do_curlDownload, 0, 11, 6, {PP_FUNCALL, PREC_FN, 0}},
+    {"compilerVersion", do_compilerVersion, 0, 11, 0, {PP_FUNCALL, PREC_FN, 0}},
 
     {NULL, NULL, 0, 0, 0, {PP_INVALID, PREC_FN, 0}},
 };
